product_docs/docs/pem/10/pem_rest_api/v6/export-custom-probes.mdx
---
navTitle: Export Custom Probes
pdfExclude: true
title: 'EDB Postgres Enterprise Manager REST APIs v6.0: Export Custom Probes'

---



## `post__probe_custom_export_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X POST https://PEM-SERVER-IP/pem/api/v6/probe/custom/export/ \
  -H 'Content-Type: application/json' \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Content-Type': 'application/json',
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.post('https://PEM-SERVER-IP/pem/api/v6/probe/custom/export/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript
const inputBody = '{
  "probes": [
    0
  ]
}';
const headers = {
  'Content-Type':'application/json',
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v6/probe/custom/export/',
{
  method: 'POST',
  body: inputBody,
  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`POST /probe/custom/export/`

Export custom probes

**Body parameter**

```json
{
  "probes": [
    0
  ]
}
```

<span id="post__probe_custom_export_-parameters"></span>

### Parameters



| Name         | In     | Type                                                            | Required | Description            |
| ------------ | ------ | --------------------------------------------------------------- | -------- | ---------------------- |
| X-Auth-Token | header | string                                                          | true     | Token of authorization |
| body         | body   | [CustomProbeExportData](schemas.mdx#tocs_customprobeexportdata) | true     | none                   |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "probe_name": "string",
    "collection_method": "w",
    "enabled": true,
    "target_type": 0,
    "any_server_version": true,
    "interval": 0,
    "lifetime": 0,
    "discard_history": true,
    "platform": "string",
    "probe_code": "string",
    "probe_columns": [
      {
        "pc_name": "string",
        "pc_data_type": "bigint",
        "pc_unit": "string",
        "pc_col_type": "m",
        "pc_graphable": true,
        "pc_calc_pit": true,
        "pc_pit_default": true
      }
    ],
    "alternate_code": [
      {
        "server_version_id": 0,
        "server_probe_code": "string"
      }
    ],
    "internal_name": "string"
  }
]
```

</Details>

<span id="post__probe_custom_export_-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="post__probe_custom_export_-responseschema"></span>

### Response Schema



Status Code **200**

| Name        | Type    | Required | Restrictions | Description |
| ----------- | ------- | -------- | ------------ | ----------- |
| *anonymous* | [allOf] | false    | none         | none        |

*allOf*

| Name                  | Type                                                                     | Required | Restrictions | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| --------------------- | ------------------------------------------------------------------------ | -------- | ------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| » *anonymous*         | [CustomProbePostData](schemas.mdx#tocs_customprobepostdata)              | false    | none         | none                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| »» probe_name         | string                                                                   | false    | none         | Name of the probe.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| »» collection_method  | string                                                                   | false    | none         | Defines the method of statistics collection. PEM supports three methods for custom made probes. i.e. SQL, WMI, Batch/Shell script. <ul><li>'w' stands for WMI script.<br />It is applicable for the windows platform only, and target_type will be <b>100</b> (i.e. agent).</li><li>'b' stands for Batch/Shell script. 'target_type' for this will be always be <b>100</b> (i.e. agent). It will behave as batch script on windows otherwise as a shell script.</li><li>'s' stands for SQL script. It will applicable only for <b>200</b> (i.e. server), <b>300</b> (i.e. database), <b>400</b> (i.e. schema), <b>500</b> (i.e. table), <b>600</b> (i.e. index), <b>700</b> (i.e. sequence), <b>800</b> (i.e. function), <b>900</b> (i.e. view).</li></ul>                                                                                                                                                                                                                                                           |
| »» enabled            | boolean                                                                  | false    | none         | Defines whether the probe is enabled/disabled by default.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| »» target_type        | integer                                                                  | false    | none         | Defines the type of the object on which the probe is applicable to. <ul><li>A probe with target_type <b>100</b> is responsible for collecting statistics for an agent.</li><li>A probe with target_type <b>200</b> is responsible for collecting statistics for a monitored server.</li><li>A probe with target_type <b>300</b> is responsible for collecting statistics for a database.</li><li>A probe with target_type <b>400</b> is responsible for collecting statistics for a schema.</li><li>A probe with target_type <b>500</b> is responsible for collecting statistics for a table.</li><li>A probe with target_type <b>600</b> is responsible for collecting statistics for a index.</li><li>A probe with target_type <b>700</b> is responsible for collecting statistics for a sequence.</li><li>A probe with target_type <b>800</b> is responsible for collecting statistics for a function.</li><li>A probe with target_type <b>900</b> is responsible for collecting statistics for a view.</li></ul> |
| »» any_server_version | boolean                                                                  | false    | none         | Defines whether this probe is applicable to any version of Postgres variant. For more details, please follow the documenation.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| »» interval           | integer                                                                  | false    | none         | Defines how frequently the probe will collect the statistics (in seconds).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| »» lifetime           | integer                                                                  | false    | none         | Defines the history data retention time (in days). It does not have any effect, if 'discard_history' is set to true.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| »» discard_history    | boolean                                                                  | false    | none         | Defines whether to discard the history data. It will not store the history of the data for this probe, when 'discard_history' is set to false.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| »» platform           | string                                                                   | false    | none         | Defines on which platform this probe can run on. It is only applicable to an agent level probe.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| »» probe_code         | string                                                                   | false    | none         | A <b>SQL/Batch script/Shell script/WMI script</b> to collect the statistics as per definition of the code.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| »» probe_columns      | [object]                                                                 | false    | none         | none                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| »»» pc_name           | string                                                                   | false    | none         | Name of the column                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| »»» pc_data_type      | string                                                                   | false    | none         | Data type of the column.<br />Supported datatypes are:<ul><ul>bigint</ul><ul>char</ul><ul>decimal</ul><ul>double precision</ul><ul>integer</ul><ul>numeric</ul><ul>real</ul><ul>text</ul><ul>text\[]</ul><ul>timestamp</ul><ul>timestamptz</ul></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| »»» pc_unit           | string                                                                   | false    | none         | Returns the unit of the column.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| »»» pc_col_type       | string                                                                   | false    | none         | Returns the columns is part of the primary key of the internal table, or not. 'k' stands for a key column, and 'm' stands for a member/normal column.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| »»» pc_graphable      | boolean                                                                  | false    | none         | Returns whether the data of the column is graphable on a chart, or not.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| »»» pc_calc_pit       | boolean                                                                  | false    | none         | Returns whether server calculates the point-in-time for the metric data for this column.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| »»» pc_pit_default    | boolean                                                                  | false    | none         | Returns the metric is stored by point-in-time by default. Please refer the 'Custom Probes' section in the documentation for detailed information.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| »» alternate_code     | \[[AlternateServerProbeCode](schemas.mdx#tocs_alternateserverprobecode)] | false    | none         | none                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| »»» server_version_id | integer                                                                  | false    | none         | Server version id for the support monitored server<table class="model"><thead><tr><th>server_version_id</th><th>Database Server</th></tr></thead><thead /><tbody><tr><td>10905</td><td>PostgreSQL 9.5</td></tr><tr><td>10906</td><td>PostgreSQL 9.6</td></tr><tr><td>11000</td><td>PostgreSQL 10</td></tr><tr><td>11100</td><td>PostgreSQL 11</td></tr><tr><td>11200</td><td>PostgreSQL 12</td></tr><tr><td>11300</td><td>PostgreSQL 13</td></tr><tr><td>20905</td><td>Postgres Plus Advanced Server 9.5</td></tr><tr><td>20906</td><td>Postgres Plus Advanced Server 9.6</td></tr><tr><td>21000</td><td>EDB Postgres Advanced Server 10</td></tr><tr><td>21100</td><td>EDB Postgres Advanced Server 11</td></tr><tr><td>21200</td><td>EDB Postgres Advanced Server 12</td></tr><tr><td>21300</td><td>EDB Postgres Advanced Server 13</td></tr></tbody></table>                                                                                                                                                      |
| »»» server_probe_code | string                                                                   | false    | none         | SQL query to run on the specified server version                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |

*and*

| Name             | Type   | Required | Restrictions | Description                                                          |
| ---------------- | ------ | -------- | ------------ | -------------------------------------------------------------------- |
| » *anonymous*    | object | false    | none         | none                                                                 |
| »» internal_name | string | false    | none         | Internal name of the probe from the system where probe was exported. |

##### Enumerated Values

| Property          | Value            |
| ----------------- | ---------------- |
| collection_method | w                |
| collection_method | b                |
| collection_method | s                |
| pc_data_type      | bigint           |
| pc_data_type      | char             |
| pc_data_type      | decimal          |
| pc_data_type      | double precision |
| pc_data_type      | integer          |
| pc_data_type      | numeric          |
| pc_data_type      | real             |
| pc_data_type      | text             |
| pc_data_type      | text\[]          |
| pc_data_type      | timestamp        |
| pc_data_type      | timestamptz      |
| pc_col_type       | m                |
| pc_col_type       | k                |

!!! info

    This operation does not require authentication




<span id="edb-postgres-enterprise-manager-rest-apis-import-custom-probes"></span>
